# SecureDoc-AI

./: .cursorrules  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: 001-vector-database-selection.md  002-modular-rag-architecture.md  003-ingestion-strategy.md  004-retrieval-logic.md  005-testing-and-validation.md  README.md
src/api/: main.py  schemas.py
src/core/: config.py
src/core/logic/: ingestion.py  retrieval.py
src/services/: pdf_service.py  qdrant_service.py
src/utils/: pii_masker.py
tests/integration/: test_rag_integrity.py  test_retrieval.py
tests/unit/: test_pii_masker.py
